feat(editor): don't use dotted outline to improve performance

--- a/editor/style.css
+++ b/editor/style.css
@@ -17,6 +17,11 @@ aside {
   background-color: #333;
 }
 
+#side-view-doc {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 textarea {
   resize: vertical;
 }
