--- a/editor/style.css
+++ b/editor/style.css
@@ -15,11 +15,14 @@ main {
 aside {
   width: 264px;
   background-color: #333;
+  height: 100vh;
 }
 
 #side-view-doc {
   overflow-x: hidden;
   overflow-y: auto;
+  padding: 4px;
+  min-height: 0;
 }
 
 textarea {
