--- a/editor/style.css
+++ b/editor/style.css
@@ -21,12 +21,15 @@ aside {
 #side-view-doc {
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 4px;
   min-height: 0;
 }
 
 textarea {
   resize: vertical;
+}
+
+.pad {
+  padding: 4px;
 }
 
 .flex {
