--- a/editor/style.css
+++ b/editor/style.css
@@ -6,6 +6,27 @@ body {
 
 body, input, button, textarea {
   font-family: monospace;
+  font-size: 14px;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+h2 {
+  font-size: 18px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+h4, h5, h6 {
+  font-size: 14px,
+}
+
+hr {
+  border: solid #666 1px;
 }
 
 main {
@@ -22,6 +43,31 @@ aside {
   overflow-x: hidden;
   overflow-y: auto;
   min-height: 0;
+  border: solid #444;
+  border-width: 2px 0 2px 0;
+}
+
+ul {
+  padding-inline-start: 20px;
+}
+
+pre {
+  margin: 0 0 4px 0;
+  padding: 4px;
+  border: solid #444 2px;
+  background-color: #222;
+  overflow: hidden;
+}
+
+p > code {
+  background-color: #222;
+  border: solid #444 2px;
+  padding-inline: 4px;
+}
+
+input[type=text], input[type=number], textarea, select {
+  border: solid #666 2px;
+  background-color: #fff;
 }
 
 textarea {
